--- a/style.css
+++ b/style.css
@@ -1,17 +1,25 @@
-body {
-    background-image: url("./assets/gates.jpg");
-    background-size: cover;
+
+
+html,body {
+    background-image: url("./assets/station.jpg");
+    background-repeat: no-repeat;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
     text-align: center;
+    width: 100%;
+    height: 100%;
 }
+
+
 
 h1 {
     margin-top: 10px;
     margin-bottom: 10px;
+    color: white;
 }
 
 h2 {
+    color: white;
     font-size: 50px;
     margin-top: 0;
     margin-bottom: 20px;
