--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 html,body {
     background-image: url("./assets/station.jpg");
     background-repeat: no-repeat;
+    background-size: cover;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
     text-align: center;
@@ -16,6 +17,7 @@ h1 {
     margin-top: 10px;
     margin-bottom: 10px;
     color: white;
+    text-shadow: 1px 1px 1px black;
 }
 
 h2 {
@@ -23,6 +25,7 @@ h2 {
     font-size: 50px;
     margin-top: 0;
     margin-bottom: 20px;
+    text-shadow: 1px 1px 1px black;
 }
 
 button {
