--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 
 html,body {
-    background-image: url("./assets/station.jpg");
+    background-image: url("./assets/bus-stop-pedestrian-scenery-digital-art-uhdpaper.com-4K-8.1362.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -37,6 +37,7 @@ button {
     width: 200px;
     margin-bottom: 5px;
     border-radius: 5px;
+    box-shadow: 1px 1px 1px black;
 }
 
 #increment-btn {
