--- a/style.css
+++ b/style.css
@@ -28,6 +28,14 @@ h2 {
     text-shadow: 1px 1px 1px black;
 }
 
+p{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: white;
+    font-size: 20px;
+    text-shadow: 1px 1px 1px black;
+}
+
 button {
     border: none;
     padding-top: 10px;
