--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ p{
 }
 
 button {
-    border: none;
+    border: 1px solid black;
     padding-top: 10px;
     padding-bottom: 10px;
     color: white;
